# wc26-poolgeist

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
data/templates/: fixtures_template.csv  manual_adjustments_template.csv  market_odds_template.csv  news_signals_template.csv  player_scorer_priors_template.csv  team_cards_template.csv  teams_template.csv  third_place_mapping_template.csv
examples/: minimal_config.yaml  neutral_demo_fixtures.csv  neutral_demo_teams.csv
notebooks/: wc26_poolgeist_demo.ipynb
src/poolgeist/: __init__.py  config.py  data.py  schemas.py  scoring.py  team_cards.py
src/poolgeist/adapters/: bing.py  brave.py  openai_client.py  search_base.py  serpapi.py  tavily.py
src/poolgeist/models/: __init__.py  base.py  bayesian_update.py  correlated_goals.py  dixon_coles.py  ensemble.py  ising.py  market.py  negative_binomial.py  news.py  octopus.py  poisson.py  sentiment_llm.py  skellam.py  spin_flip.py  temperature.py
src/poolgeist/optimization/: bonus.py  chaos.py  exact_scores.py  popularity.py  strategy.py
src/poolgeist/reports/: exports.py  plots.py  summaries.py
src/poolgeist/simulation/: __init__.py  group_stage.py  knockout.py  match.py  penalties.py  third_place.py  tournament.py
src/poolgeist/utils/: probability.py  random.py  validation.py
tests/: conftest.py  test_data_injection.py  test_ensemble.py  test_group_stage.py  test_ising.py  test_knockout.py  test_models.py  test_news.py  test_octopus.py  test_probability.py  test_regression_review_comments.py  test_scoring.py  test_tournament_orchestrator.py
