[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poolgeist"
version = "0.1.0"
description = "A neutral Monte Carlo office-pool simulator for the 2026 World Cup."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Poolgeist contributors" }]
keywords = ["world-cup", "simulation", "monte-carlo", "office-pool"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "jupyter>=1.0",
  "ipykernel>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
search = ["google-search-results>=2.4", "tavily-python>=0.3"]
dev = ["pytest>=8.0", "ruff>=0.4"]
all = ["poolgeist[openai,search,dev]"]

[project.urls]
Homepage = "https://example.com/poolgeist"
Repository = "https://example.com/poolgeist"

[tool.hatch.build.targets.wheel]
packages = ["src/poolgeist"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
